# AiKF

./: .gitignore  LICENSE  README  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: globals.css
src/components/: AmbientBackground.vue  AnimeCard.vue  AnimeGrid.vue  AnimeGridSkeleton.vue  CoverImage.vue  CustomBackground.vue  HeroCarousel.vue  NavShell.vue  PlayerDialog.vue  SearchBar.vue  SectionCard.vue  SectionHeader.vue  ThemeToggle.vue  TitleBar.vue  ToggleSwitch.vue
src/components/views/: BrowseView.vue  CalendarView.vue  DetailView.vue  DiscoverView.vue  LibraryView.vue  SearchView.vue  SettingsView.vue
src/composables/: useAsync.ts  useTheme.ts
src/lib/: global-ux.ts  preload-img.ts
src/lib/anich/: api-client.ts  cache.ts  client.ts  format.ts  parsers.ts  types.ts  wire.ts
src/stores/: library.ts  settings.ts  ui.ts
